@@ -29,8 +29,10 @@ postgresql-8.3 (8.3~rc1-1) UNRELEASED; urgency=low
     (Closes: #458752)
   * debian/rules: Run make bigcheck instead of check, to run the numeric_big
     test, too.
+  * debian/rules: Add target 'contrib-check' for running the tests in contrib.
+    Do not call it by default for now, still needs some work.
 
- -- Martin Pitt <mpitt@debian.org>  Fri, 04 Jan 2008 17:50:19 +0100
+ -- Martin Pitt <mpitt@debian.org>  Fri, 04 Jan 2008 18:26:15 +0100
 
 postgresql-8.3 (8.3~beta4-1) experimental; urgency=low
 
